--- a/app/static/css/pages/speech_logs/speech_logs-desktop.css
+++ b/app/static/css/pages/speech_logs/speech_logs-desktop.css
@@ -13,4 +13,16 @@
 	.toolbar-spacer {
 		display: block;
 	}
+
+	.speech-logs-content {
+		max-width: 1400px;
+	}
+
+	.progress-table .level-cell {
+		width: 100px;
+	}
+
+	.progress-table .speech-column {
+		width: 18%;
+	}
 }
