support hidden flag in meeting template files

--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -349,8 +349,8 @@
                     </tr>
                 </table>
                 <div class="form-actions">
-                    <button type="submit" class="btn btn-primary">Create Meeting</button>
-                    <button type="button" class="btn btn-danger" onclick="closeCreateAgendaModal()">Cancel</button>
+                    <button type="submit" class="btn btn-success">Create Meeting</button>
+                    <button type="button" class="btn btn-primary" onclick="closeCreateAgendaModal()">Cancel</button>
                 </div>
             </form>
         </div>
